modified icon path name

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@
 		<title>Leetcode</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="icon" href="/favicon.ico" />
+		<link rel="icon" href="/favicon1.ico" />
 		<link rel="stylesheet" href="/assets/css/main.css" />
 		<link rel="stylesheet"
       		href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.0.3/styles/zenburn.min.css">
