--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,8 +35,8 @@
 						</header>
 
 						<!-- Content -->
-							<div class="wrapper">
-								<div class="inner">
+							<!-- <div class="wrapper">
+								<div class="inner"> -->
 
 									<!-- <h3 class="major">Lorem ipsum dolor</h3>
 									<p>Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam ut gravida sapien.</p>
@@ -61,9 +61,9 @@
 										</article>
                                     </section> -->
                                     
-
+<!-- 
 								</div>
-							</div>
+							</div> -->
 
 					</section>
 
